<resources>
    <string name="app_name">Smallet Key Vault</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_new_user">Wallet Creation</string>
    <string name="done_seed_backup">Done Seed Backup</string>
    <string name="password_input_error">4 or more alphanumeric characters</string>
    <string name="passwordHash" translatable="false">passwordHash</string>
    <string name="master_seed" translatable="false">master_seed</string>
    <string name="encSeed" translatable="false">encSeed</string>
    <string name="ivSeed" translatable="false">ivSeed</string>
    <string name="hdCoinIdColon" translatable="false">hdCoinId:</string>
    <string name="issuedCoins" translatable="false">issuedCoins</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smallet Key Vault</string>
    <string name="nav_header_subtitle" translatable="false">info@silc.club</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="import_seed">Import Seed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="support_email" translatable="false">support@smallet.co</string>
    <string name="goto_play_store">Goto play store page</string>
    <string name="rating_and_check_app_version">Rating and check version</string>
    <string name="email_to_support_team">Email to support team</string>
    <string name="title_mail_to_support">Mail to support team</string>
    <string name="send_log_to_support_team">Send log to support team</string>
    <string name="title_send_log">Send log</string>
    <string name="show_system_app_info">System app information</string>
    <string name="title_show_system_app_info">App information</string>
    <string name="program_version">Program version</string>
    <string name="company_smallet_network_inc">Smallet Networks Inc</string>
    <string name="developer">Developer</string>
    <string name="remove_all_account">Remove All Account</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="drawer_master_seed">Master Seed</string>
    <string name="support">Support</string>
    <string name="remove_all_account_dialog_title">Remove All Account</string>
    <string name="remove_all_account_dialog_msg">Remove all accounts already created. You can generate it from your wallet app.  OK to proceed.</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="password_hint">Password</string>
    <string name="re_enter_password_hint">Re-enter Password</string>
    <string name="i_have_seed_bip39">I have Seed(BIP39)</string>
    <string name="passphrase_optional">Passphrase(optional)</string>
    <string name="backup_your_master_seed_to_safe_place_if_you_lost_these_seed_words_you_cannot_recover_your_wallet_keys">Backup your master seed to safe place. If you lost these seed words, you cannot recover your wallet keys.</string>
    <string name="generate_new_master_seed">Generate NEW Master Seed</string>
    <string name="already_have_a_seed_login">Already have a seed? Login</string>
    <string name="master_seed_hont">Master Seed</string>
    <string name="current_master_seed">Current Master Seed</string>
    <string name="create_account_button">Create Account</string>
    <string name="new_master_seed">NEW Master Seed</string>
    <string name="generating_new_mater_seed_message">Generating NEW master seed means, delete all current Keys and wallet address in the vault. You should bakcup current Master Seed.  OK to proceed.</string>
    <string name="master_seed_import_title">Importing Master Seed</string>
    <string name="import_master_seed_message">Importing MASTER SEED means, delete all current Keys and wallet address in the vault. You should bakcup current Master Seed.  OK to proceed.</string>
    <string name="import_failed">Import failed -</string>
    <string name="master_seed_import_success">Master seed Import successful.</string>
    <string name="login">Login</string>
    <string name="password_do_not_match">Password Do not match</string>
    <string name="number_of_seed_message">number of words in the seed word must be 12, 15, 18, 21 or 24.</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="enter_valid_seed_words">enter valid seed words</string>
    <string name="no_master_seed_yet_create_one">Create new Master Seed</string>
    <string name="confirm_transaction_title">Confirm Transaction</string>
    <string name="confirm_button">Confirm</string>
    <string name="reject_button">Reject</string>
    <string name="finish_key_vault_after_sign">Finish key vault after sign</string>
    <string name="auth_required">Authentication required</string>
    <string name="auth_required_desc">Please verify the password or PIN or pattern or fingerprint you set on Phone.</string>
    <string name="finish_after_sign_desc">If you turn this off, you do not need to authenticate every sign-off. You only need to authenticate on the first run.</string>
    <string name="auth_failed">Failure: Unable to verify user\'s identity</string>
    <string name="login_failed_toast">Login failed</string>
    <string name="smallet_key_vault_title">Smallet Key Vault</string>
    <string name="key_valult_service_unlocked_message">Vault unlocked, finish app to lock vault.</string>
    <string name="public_key">Public Key</string>
    <string name="add_account">Add Account</string>
    <string name="scan_qr_code">Scan QR Code</string>

</resources>
