<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_master_seed"
            android:icon="@drawable/ic_menu_master_seed"
            android:title="@string/drawer_master_seed" />
        <item
            android:id="@+id/nav_add_account"
            android:icon="@drawable/ic_menu_plus"
            android:title="@string/add_account" />
        <item
            android:id="@+id/nav_remove_all_account"
            android:icon="@drawable/ic_menu_remove_all_account"
            android:title="@string/remove_all_account" />
        <item
            android:id="@+id/nav_scan_QR_code"
            android:icon="@drawable/ic_menu_camera_big"
            android:title="@string/scan_qr_code" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
